--- a/scss/components/_faq.sass
+++ b/scss/components/_faq.sass
@@ -21,6 +21,10 @@
 .faq-photo
   position: relative
   text-align: center
+  background: transparent url("../../img/min/faq/photo.png") no-repeat center / cover
+  max-height: 570px
+  height: 390px
+
 
   &__text
     padding: 12px 30px 10px 20px
@@ -29,6 +33,7 @@
     bottom: 0
     background: #0b3554
     opacity: .8
+    text-align: left
 
 .toolTip-block
   position: relative
